--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
 			<canvas id="generalCanvas" width="520" height="350"></canvas>
 
+			<script src="vector.js" type="text/javascript"></script>
 			<script src="particle.js" type="text/javascript"></script>
 			<script src="physics.js" type="text/javascript"></script>
 			<script src="graphics.js" type="text/javascript"></script>
+			<script src="controls.js" type="text/javascript"></script>
 			<script src="index.js" type="text/javascript"></script>
 			<p>
 				<span id="physics_fps"></span>
